cleaned up initial implementation
* fixed native extension path to work with Node >0.5
* fixed "make test"
* changed lib path location
* tests use relative require() paths

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
         "url" : "git://github.com/melor/node-posix.git"
     },
     "author" : "Mika Eloranta <mel@ohmu.fi>",
-    "main" : "./lib",
+    "main" : "./lib/posix",
     "dependencies" : {
     },
     "scripts" : {
