--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
     "name": "posix",
-    "version": "0.0.2",
+    "version": "0.0.3",
     "description": "The missing POSIX system calls",
-    "keywords" : ["posix", "rlimit", "getrlimit", "setrlimit", "ulimit"],
+    "keywords" : ["posix", "rlimit", "getrlimit", "setrlimit", "ulimit", "setuid", "setgid", "seteuid", "setegid", "chroot", "setreuid", "setregid", "getpgrp", "setsid", "setpgid"],
     "homepage": "http://github.com/melor/node-posix",
     "repository" : {
         "type" : "git",
