added: posix.getpwnam(user) and posix.getgrnam(group)
Refactored the following functions to use the above:

* posix.seteuid()
* posix.setreuid()
* posix.setegid()
* posix.setregid()

--- a/package.json
+++ b/package.json
@@ -1,8 +1,12 @@
 {
     "name": "posix",
-    "version": "0.0.3",
+    "version": "0.0.4",
     "description": "The missing POSIX system calls",
-    "keywords" : ["posix", "rlimit", "getrlimit", "setrlimit", "ulimit", "setuid", "setgid", "seteuid", "setegid", "chroot", "setreuid", "setregid", "getpgrp", "setsid", "setpgid"],
+    "keywords" : [
+        "posix", "rlimit", "getrlimit", "setrlimit", "ulimit", "setuid",
+        "setgid", "seteuid", "setegid", "chroot", "setreuid", "setregid",
+        "getpgrp", "setsid", "setpgid", "getpwnam", "getgrnam", "uid", "gid"
+    ],
     "homepage": "http://github.com/melor/node-posix",
     "repository" : {
         "type" : "git",
