build: removed default package.json "install" target
This makes npm hopefully automatically use either node-gyp or
node-waf, whichever is the proper tool with the particular node
version.

Also added node v0.8 to the travis config.

--- a/package.json
+++ b/package.json
@@ -18,8 +18,7 @@
     "dependencies" : {
     },
     "scripts" : {
-        "test" : "make test",
-        "install" : "node-waf configure build || true"
+        "test" : "make test"
     },
     "engines" : { "node": ">= 0.4.0" }
 }
