Make this work on Illumos/Solaris
Remove getdomainname and setdomainname as they are not POSIX.

Some system implement sethostname(char *...) instead of const char *.
Since, a passing in const char * will cause an error on those platforms
and passing a char * will not cause an error on any platform, prefer the
latter.

--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
         "posix", "rlimit", "getrlimit", "setrlimit", "ulimit", "setuid",
         "setgid", "seteuid", "setegid", "chroot", "setreuid", "setregid",
         "getpgrp", "setsid", "setpgid", "getpwnam", "getgrnam", "uid", "gid",
-        "syslog", "setlogmask", "gethostname", "sethostname",
-        "getdomainname", "setdomainname"
+        "syslog", "setlogmask", "gethostname", "sethostname"
     ],
     "homepage": "http://github.com/melor/node-posix",
     "repository" : {
