--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "author" : "Mika Eloranta <mel@ohmu.fi>",
     "main" : "./lib/posix",
     "dependencies" : {
+        "bindings" : "~1.1.0"
     },
     "scripts" : {
         "test" : "make test"
