--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,9 @@
 language: node_js
 node_js:
-  - 0.6
-  - 0.8
-  - 0.9
-  - 0.10
+  - "0.8"
+  - "0.10"
+  - "0.12"
+  - "iojs-v1.1.0"
 os:
   - linux
   - osx
