--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "author" : "Mika Eloranta <mel@ohmu.fi>",
     "main" : "./lib/posix",
     "dependencies" : {
+      "nan": "~1.6.2"
     },
     "scripts" : {
         "test" : "make test"
     },
-    "engines" : { "node": ">= 0.6.0" }
+    "engines" : { "node": ">= 0.8.0" }
 }
