package: use a specific version of 'nan'
Using 'latest' will not provide repeatable builds.

--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "author" : "Mika Eloranta <mel@ohmu.fi>",
     "main" : "./lib/posix",
     "dependencies" : {
-        "nan": "latest"
+        "nan": "2.0.x"
     },
     "scripts" : {
         "test" : "make test"
