package: add license field

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
     "name": "posix",
     "version": "2.0.1",
     "description": "The missing POSIX system calls",
+    "license": "MIT",
     "keywords" : [
         "posix", "rlimit", "getrlimit", "setrlimit", "ulimit", "setuid",
         "setgid", "seteuid", "setegid", "chroot", "setreuid", "setregid",
