--- a/.travis.yml
+++ b/.travis.yml
@@ -1,3 +1,5 @@
+os:
+  - linux
 language: node_js
 node_js:
   - "0.8"
@@ -12,6 +14,15 @@ node_js:
   - "iojs-v3.2.0"
   - "iojs-v3.3.0"
   - "iojs"
-os:
-  - linux
-script: make travis
+sudo: true
+addons:
+  apt:
+    sources:
+    - ubuntu-toolchain-r-test
+    packages:
+    - g++-4.8
+install:
+  - export CXX=g++-4.8
+  - $CXX --version
+  - npm install
+  - make travis
